// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`json-schema: array 1`] = `
"export type Test = {
  /**
   * aa
   */
  a: string;
  /**
   * bb
   */
  b: number[];
  c: {
    /**
     * c000
     */
    c0: string;
  };
}[];
"
`;

exports[`json-schema: object 1`] = `
"export interface Test {
  /**
   * aa
   */
  a: string;
  /**
   * bb
   */
  b: number;
  c: {
    /**
     * c00
     */
    c0: boolean;
    c1: number[];
  };
}
"
`;

exports[`json-schema: object, with dataKey 1`] = `
"export interface Test {
  /**
   * c00
   */
  c0: boolean;
  c1: number[];
}
"
`;

exports[`mockjs-json 1`] = `
"export interface Test {
  x?: [
    {
      email?: string;
    }
  ];
  id?: string;
  number?: number;
}
"
`;

exports[`others 1`] = `"export type Test = any"`;
